--- a/popup.html
+++ b/popup.html
@@ -26,6 +26,16 @@
       display: flex;
       gap: 5px;
       margin-bottom: 8px;
+      cursor: move;
+      transition: opacity 0.2s;
+    }
+
+    .url-item.dragging {
+      opacity: 0.5;
+    }
+
+    .url-item.drag-over {
+      border-top: 2px solid #4285f4;
     }
 
     input[type="text"] {
@@ -87,11 +97,10 @@
 
   <div style="margin-bottom: 10px; border-bottom: 1px solid #444; padding-bottom: 10px;">
     <div style="font-size: 14px; margin-bottom: 8px; color: #ccc;">Layout Grid</div>
-    <div style="display: flex; gap: 8px; margin-top: 5px;">
+    <div style="display: flex; gap: 8px; margin-top: 5px; align-items: center;">
       <input type="number" id="custom-rows" placeholder="Rows" min="1" max="5" value="1" style="flex:1; width: 60px;">
       <span style="display:flex; align-items:center;">x</span>
       <input type="number" id="custom-cols" placeholder="Cols" min="1" max="5" value="1" style="flex:1; width: 60px;">
-      <button id="layout-custom-apply" style="flex:1; background: #4285f4; border: 1px solid #4285f4;">Apply</button>
     </div>
   </div>
 
