feat: Implement a custom searchable select component and integrate it into the extension's UI.

--- a/mixed-view.html
+++ b/mixed-view.html
@@ -149,6 +149,7 @@
     </div>
 
     <div id="mgem-grid-container"></div>
+    <script src="custom-select.js"></script>
     <script src="mixed-view.js"></script>
 </body>
 </html>
